made changes to the testJavaScript variable

--- a/Digital News.html
+++ b/Digital News.html
@@ -29,7 +29,7 @@
             <article></article>
         </section>
         <script>
-            const testJavaScript = 'java is workinggg'
+            const testJavaScript = 'java is workinggg this is the new change'
             console.log(testJavaScript)
         </script>
 
